--- a/heima_ssm/heima_ssm_domain/pom.xml
+++ b/heima_ssm/heima_ssm_domain/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>heima_ssm_domain</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>com.itheima</groupId>
+            <artifactId>heima_ssm_utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
