--- a/heima_ssm/heima_ssm_web/src/main/webapp/WEB-INF/web.xml
+++ b/heima_ssm/heima_ssm_web/src/main/webapp/WEB-INF/web.xml
@@ -27,6 +27,9 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+    <listener>
+        <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+    </listener>
 
     <!--配置全局乱码解决-->
     <filter>
@@ -54,6 +57,11 @@
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+
+    <error-page>
+        <error-code>403</error-code>
+        <location>/403.jsp</location>
+    </error-page>
 
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
